# lumina-proxy

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  config.yaml  docker-compose.yml  prd.md
.github/workflows/: build.yml  docker.yml  release.yml
assets/: icon.rgba
docs/superpowers/plans/: 2026-04-20-v0.1-minimal-viable.md  2026-04-21-windows-system-tray.md  2026-04-25-performance-metrics-aggregation-plan.md  2026-04-27-moonlight-tool-call-support.md  2026-05-18-http-forward-proxy.md
docs/superpowers/specs/: 2026-04-21-windows-system-tray-design.md  2026-04-25-performance-metrics-aggregation-design.md  2026-04-27-moonlight-tool-call-support-design.md  2026-05-18-http-forward-proxy-design.md
src/: auth.rs  config.rs  convert.rs  lib.rs  logging.rs  main.rs  proxy.rs  stats.rs  token_counter.rs  tray.rs  types.rs
src/http_proxy/: auth.rs  handlers.rs  mod.rs  server.rs
src/proxy/: handlers.rs  mod.rs  non_streaming.rs  responses_convert.rs  state.rs  streaming.rs  tools.rs  url.rs
tests/: config_tests.rs  conversion_tests.rs  http_proxy_tests.rs  tray_tests.rs
